Continue development with openstack-installer until upi-installer is fixed.:wq

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -11,7 +11,7 @@ parameters:
 - name: IMAGE_FORMAT
 - name: IMAGE_TESTS
   required: true
-- name: IMAGE_UPI_INSTALLER
+- name: IMAGE_OPENSTACK_INSTALLER
   required: true
 - name: CLUSTER_TYPE
   required: true
@@ -1284,16 +1284,16 @@ objects:
             export CLUSTER_NAME=${CLUSTER_NAME:${#CLUSTER_NAME}<14?0:-14}
 
             # we need to install openstack client and other requirements
-            echo "OpenStack: installing requirements"
-            cat ${UPI_DIR}/requirements.txt
-            export PATH="${HOME}/.local/bin:${PATH}"
-            echo $PATH
-            echo "OpenStack: installing pip"
-            easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            echo "Openstack: upgrading pip and setup tools"
-            pip install --user --upgrade pip setuptools
-            pip install --user -r ${UPI_DIR}/requirements.txt
-            which ansible-playbook
+            #echo "OpenStack: installing requirements"
+            #cat ${UPI_DIR}/requirements.txt
+            #export PATH="${HOME}/.local/bin:${PATH}"
+            #echo $PATH
+            #echo "OpenStack: installing pip"
+            #easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
+            #echo "Openstack: upgrading pip and setup tools"
+            #pip install --user --upgrade pip setuptools
+            #pip install --user -r ${UPI_DIR}/requirements.txt
+            #which ansible-playbook
 
             # create api and ingress FIPS
             LB_FIP_AND_ID=$(openstack floating ip create --description api.$CLUSTER_NAME.$BASE_DOMAIN $OPENSTACK_EXTERNAL_NETWORK --format value -c 'floating_ip_address' -c 'id')
@@ -2338,16 +2338,16 @@ objects:
           if [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
 
             # we need to install openstack client and other requirements
-            echo "OpenStack: installing requirements"
-            cat ${UPI_DIR}/requirements.txt
-            export PATH="${HOME}/.local/bin:${PATH}"
-            echo $PATH
-            echo "OpenStack: installing pip"
-            easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            echo "Openstack: upgrading pip and setup tools"
-            pip install --user --upgrade pip setuptools
-            pip install --user -r ${UPI_DIR}/requirements.txt
-            which ansible-playbook
+            #echo "OpenStack: installing requirements"
+            #cat ${UPI_DIR}/requirements.txt
+            #export PATH="${HOME}/.local/bin:${PATH}"
+            #echo $PATH
+            #echo "OpenStack: installing pip"
+            #easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
+            #echo "Openstack: upgrading pip and setup tools"
+            #pip install --user --upgrade pip setuptools
+            #pip install --user -r ${UPI_DIR}/requirements.txt
+            #which ansible-playbook
 
             # We have to truncate cluster name to 14 chars, because there is a limitation in the install-config
             # Now it looks like "ci-op-rl6z646h-65230".
