Enable tide for build

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -416,6 +416,8 @@ tide:
         repos:
           service-binding-operator:
             skip-unknown-contexts: true
+          build:
+            skip-unknown-contexts: true
   max_goroutines: 20
   merge_label: tide/merge-method-merge
   merge_method:
@@ -455,6 +457,7 @@ tide:
     openshift/verification-tests: squash
     redhat-developer/openshift-jenkins-operator: rebase
     redhat-developer/service-binding-operator: squash
+    redhat-developer/build: squash
   pr_status_base_urls:
     '*': https://prow.svc.ci.openshift.org/pr
     openshift-priv: https://deck-internal-ci.svc.ci.openshift.org/pr
@@ -1240,6 +1243,7 @@ tide:
     - do-not-merge/invalid-owners-file
     repos:
     - redhat-developer/service-binding-operator
+    - redhat-developer/build
   - labels:
     - lgtm
     - approved
