--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1395,6 +1395,16 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  redhat-developer/build:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   redhat-operator-ecosystem:
   - endpoint: http://refresh
     events:
