Enable approve plugin

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -53,6 +53,7 @@ approve:
   - redhat-developer/devconsole-api
   - redhat-developer/git-service
   - redhat-developer/service-binding-operator
+  - redhat-developer/build
   require_self_approval: true
 - ignore_review_state: false
   repos:
@@ -2690,6 +2691,8 @@ plugins:
   - verify-owners
   - wip
   - yuks
+  redhat-developer/build:
+  - approve
   redhat-developer/devconsole-api:
   - approve
   redhat-developer/devconsole-operator:
