add image mirror for operator images and build addon harness

--- a/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
+++ b/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
@@ -20,6 +20,9 @@ images:
       - destination_dir: .
         source_path: /go/src/github.com/integr8ly/integreatly-operator/build
   to: integreatly-operator
+- dockerfile_path: Dockerfile.functional
+  from: os
+  to: integreatly-operator-test-harness
 promotion:
   name: integreatly-operator
   namespace: integr8ly
