Add alarms for the openshift-kni/features deploy 4.4 branch
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
@@ -347,6 +347,16 @@ spec:
       labels:
         severity: critical
         team: kni-cnf
+    - alert: periodic-ci-openshift-kni-cnf-features-deploy-release-4.4-cnf-e2e-gcp-periodic-failures
+      annotations:
+        message: '@ Prow job periodic-ci-openshift-kni-cnf-features-deploy-release-4.4-cnf-e2e-gcp-periodic
+          has failures. Check on <https://prow.svc.ci.openshift.org/?type=periodic&job=periodic-ci-openshift-kni-cnf-features-deploy-release-4.4-cnf-e2e-gcp-periodic|deck>'
+      expr: |
+        rate(prowjob_state_transitions{job_name="periodic-ci-openshift-kni-cnf-features-deploy-release-4.4-cnf-e2e-gcp-periodic",state="failure"}[5m]) > 0
+      for: 1m
+      labels:
+        severity: critical
+        team: kni-cnf
     - alert: periodic-ci-redhat-developer-service-binding-operator-master-dev-release-failures
       annotations:
         message: '@openshift-app-services Prow job periodic-ci-redhat-developer-service-binding-operator-master-dev-release
