Revert "Switching to openstack-installer image instead of upi-installer"
This reverts commit 0e4aad94bd47849516a82ff45654b614b0aa23d8.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -305,7 +305,7 @@ objects:
 
     # Runs an install
     - name: setup
-      image: ${IMAGE_OPENSTACK_INSTALLER}
+      image: ${IMAGE_UPI_INSTALLER}
       terminationMessagePolicy: FallbackToLogsOnError
       volumeMounts:
       - name: shared-tmp
@@ -364,7 +364,7 @@ objects:
       - name: INSTALL_INITIAL_RELEASE
       - name: RELEASE_IMAGE_INITIAL
       - name: UPI_DIR
-        value: /go/src/github.com/openshift/installer/upi/${CLUSTER_TYPE}
+        value: /var/lib/openshift-install/upi/${CLUSTER_TYPE}
 
       command:
       - /bin/sh
@@ -2061,7 +2061,7 @@ objects:
 
     # Performs cleanup of all created resources
     - name: teardown
-      image: ${IMAGE_OPENSTACK_INSTALLER}
+      image: ${IMAGE_UPI_INSTALLER}
       terminationMessagePolicy: FallbackToLogsOnError
       volumeMounts:
       - name: shared-tmp
@@ -2097,7 +2097,7 @@ objects:
         value: '/tmp/cluster-profile/clouds.yaml'
       - name: INSTALLER_SOURCE_PATH
       - name: UPI_DIR
-        value: /go/src/github.com/openshift/installer/upi/${CLUSTER_TYPE}
+        value: /var/lib/openshift-install/upi/${CLUSTER_TYPE}
       command:
       - /bin/bash
       - -c
