console: use existing shellcheck image based on fedora

--- a/ci-operator/config/openshift/console/openshift-console-master.yaml
+++ b/ci-operator/config/openshift/console/openshift-console-master.yaml
@@ -8,7 +8,7 @@ base_images:
     cluster: https://api.ci.openshift.org
     name: shellcheck
     namespace: ci
-    tag: stable
+    tag: latest
 build_root:
   image_stream_tag:
     cluster: https://api.ci.openshift.org
