CI integration for windows-machine-config-operator
Ran "make new-repo" with the following configuration:
```
Welcome to the repository configuration initializer.
In order to generate a new set of configurations, some information will be necessary.

Let's start with general information about the repository...
Enter the organization for the repository: openshift
Enter the repository to initialize: windows-machine-config-operator
Enter the development branch for the repository: [default: master]

Now, let's determine how the repository builds output artifacts...
Does the repository build and promote container images?  [default: no] yes
Does the repository promote images as part of the OpenShift release?  [default: no]
Do any images build on top of the OpenShift base image?  [default: no]
Do any images build on top of the CentOS base image?  [default: no]

Now, let's configure how the repository is compiled...
What version of Go does the repository build with? [default: 1.13]
[OPTIONAL] Enter the Go import path for the repository if it uses a vanity URL (e.g. "k8s.io/my-repo"):
[OPTIONAL] What commands are used to build binaries in the repository? (e.g. "go install ./cmd/...") make build
[OPTIONAL] What commands are used to build test binaries? (e.g. "go install -race ./cmd/..." or "go test -c ./test/...")

Now, let's configure test jobs for the repository...

First, we will configure simple test scripts. Test scripts
execute unit or integration style tests by running a command
from your repository inside of a test container. For example,
a unit test may be executed by running "make test-unit" after
checking out the code under test.

Are there any test scripts to configure?  [default: no] yes
What is the name of this test (e.g. "unit")?  lint
Does this test require built binaries?  [default: no]
What commands in the repository run the test (e.g. "make test-unit")?  make lint
Are there any more test scripts to configure?  [default: no] yes
What is the name of this test (

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -123,6 +123,9 @@ approve:
 - repos:
   - openshift/csi-driver-nfs
   require_self_approval: false
+- repos:
+  - openshift/windows-machine-config-operator
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1500,6 +1503,9 @@ lgtm:
 - repos:
   - openshift/csi-driver-nfs
   review_acts_as_lgtm: true
+- repos:
+  - openshift/windows-machine-config-operator
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -2608,6 +2614,8 @@ plugins:
   openshift/whereabouts-cni:
   - approve
   openshift/windows-machine-config-bootstrapper:
+  - approve
+  openshift/windows-machine-config-operator:
   - approve
   openvswitch:
   - trigger
