--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1376,6 +1376,7 @@ tide:
     - openshift-knative/serverless-operator
     - openshift-knative/serving-operator
     - openshift-knative/kourier
+    - openshift/windows-machine-config-operator
   - labels:
     - lgtm
     - approved
