--- a/ci-operator/jobs/openshift/knative-serving/openshift-knative-serving-release-next-presubmits.yaml
+++ b/ci-operator/jobs/openshift/knative-serving/openshift-knative-serving-release-next-presubmits.yaml
@@ -4,6 +4,7 @@ presubmits:
     always_run: true
     branches:
     - release-next
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/4.3-e2e-aws-ocp-43
     decorate: true
     decoration_config:
