--- a/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
@@ -4,6 +4,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/artifacts
     decorate: true
     labels:
@@ -1749,6 +1750,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/images
     decorate: true
     decoration_config:
