--- a/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.11-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.11-presubmits.yaml
@@ -7,6 +7,7 @@ presubmits:
     context: ci/prow/gcp-major-upgrade
     decorate: true
     name: pull-ci-openshift-openshift-ansible-3.11-gcp-major-upgrade
+    optional: true
     rerun_command: /test gcp-major-upgrade
     spec:
       containers:
