Add images config option
Add the images config option pointing to the Dockerfile in the WMCO repo
and execute, "make jobs".

--- a/ci-operator/config/openshift/windows-machine-config-operator/openshift-windows-machine-config-operator-master.yaml
+++ b/ci-operator/config/openshift/windows-machine-config-operator/openshift-windows-machine-config-operator-master.yaml
@@ -4,6 +4,10 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.13
+images:
+- dockerfile_path: build/Dockerfile.ci
+  from: ""
+  to: windows-machine-config-operator
 promotion:
   name: "4.5"
   namespace: ocp
