--- a/ci-operator/jobs/openshift/windows-machine-config-operator/openshift-windows-machine-config-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/windows-machine-config-operator/openshift-windows-machine-config-operator-master-presubmits.yaml
@@ -74,7 +74,6 @@ presubmits:
     decoration_config:
       skip_cloning: true
     labels:
-      ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-windows-machine-config-operator-master-e2e-operator
     rerun_command: /test e2e-operator
@@ -101,6 +100,8 @@ presubmits:
         env:
         - name: CLUSTER_TYPE
           value: aws
+        - name: CLUSTER_VARIANT
+          value: ovn
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
