jobs: don't use weird periods in names
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.6-presubmits.yaml
@@ -2740,7 +2740,7 @@ presubmits:
     decorate: true
     labels:
       ci.openshift.io/manually-branched: "true"
-    name: pull-ci-openshift-installer-release-4.6.yaml-lint
+    name: pull-ci-openshift-installer-release-4.6-yaml-lint
     rerun_command: /test yaml-lint
     spec:
       containers:
