--- a/ci-operator/jobs/openshift/cluster-api-provider-aws/openshift-cluster-api-provider-aws-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api-provider-aws/openshift-cluster-api-provider-aws-release-4.6-presubmits.yaml
@@ -625,7 +625,7 @@ presubmits:
     decorate: true
     labels:
       ci.openshift.io/manually-branched: "true"
-    name: pull-ci-openshift-cluster-api-provider-aws-release-4.6.yaml-lint
+    name: pull-ci-openshift-cluster-api-provider-aws-release-4.6-yaml-lint
     rerun_command: /test yaml-lint
     spec:
       containers:
