openshift-ansible: script ssh bastion deploy
Use deploy.sh to create an ssh bastion in the cluster.  The 'vendored'
ssh bastion files and playbooks will be removed from the
openshift-ansible repo.

--- a/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
@@ -337,6 +337,11 @@ objects:
           sleep 10 & wait
         done
 
+        echo -e "complete! \n Setting up ssh bastion host..."
+
+        export SSH_BASTION_NAMESPACE=test-ssh-bastion
+        curl https://raw.githubusercontent.com/eparis/ssh-bastion/master/deploy/deploy.sh | bash -x
+
         echo -e "complete! \n Starting scaleup playbooks..."
 
         ansible-playbook -vvv \
