--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -706,6 +706,14 @@ config_updater:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-e2e
+    ci-operator/templates/openshift/installer/cluster-launch-installer-gcp-nested-virt-custom-test-image.yaml:
+      clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
+        default:
+        - ci
+        - ci-stg
+      name: prow-job-cluster-launch-installer-gcp-nested-virt-custom-test-image
     ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml:
       clusters:
         ci/api-build01-ci-devcluster-openshift-com:6443:
