--- a/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
@@ -4,6 +4,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/artifacts
     decorate: true
     labels:
@@ -60,6 +61,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws
     decorate: true
     decoration_config:
@@ -158,6 +160,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-csi
     decorate: true
     decoration_config:
@@ -258,6 +261,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-disruptive
     decorate: true
     decoration_config:
@@ -358,6 +362,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-fips
     decorate: true
     decoration_config:
@@ -460,6 +465,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-image-registry
     decorate: true
     decoration_config:
@@ -559,6 +565,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-jenkins
     decorate: true
     decoration_config:
@@ -657,6 +664,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-multitenant
     decorate: true
     decoration_config:
@@ -766,6 +774,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-ovn
     decorate: true
     decoration_config:
@@ -866,6 +875,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-serial
     decorate: true
     decoration_config:
@@ -964,6 +974,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-azure
     decorate: true
     decoration_config:
@@ -1063,6 +1074,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-cmd
     decorate: true
     decoration_config:
@@ -1163,6 +1175,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-conformance-k8s
     decorate: true
     decoration_config:
@@ -1261,6 +1274,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-gcp
     decorate: true
     decoration_config:
@@ -1361,6 +1375,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-gcp-builds
     decorate: true
     decoration_config:
@@ -1462,6 +1477,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-gcp-image-ecosystem
     decorate: true
     decoration_config:
@@ -1563,6 +1579,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-gcp-upgrade
     decorate: true
     decoration_config:
@@ -1650,6 +1667,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-vsphere
     decorate: true
     decoration_config:
@@ -1749,6 +1767,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/images
     decorate: true
     decoration_config:
@@ -1816,6 +1835,7 @@ presubmits:
     always_run: false
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/launch-vsphere
     decorate: true
     decoration_config:
@@ -1915,6 +1935,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/unit
     decorate: true
     decoration_config:
@@ -1980,6 +2001,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/verify
     decorate: true
     decoration_config:
