--- a/ci-operator/jobs/openshift/cluster-api/openshift-cluster-api-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api/openshift-cluster-api-release-4.4-presubmits.yaml
@@ -12,6 +12,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-api-release-4.4-git-history
+    optional: true
     rerun_command: /test git-history
     spec:
       containers:
