--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.4-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   openshift/hypershift-toolkit:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.4
     context: ci/prow/images
@@ -12,6 +12,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-hypershift-toolkit-release-4.4-images
+    optional: true
     rerun_command: /test images
     spec:
       containers:
