--- a/ci-operator/jobs/openshift/telemeter/openshift-telemeter-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/telemeter/openshift-telemeter-release-4.4-presubmits.yaml
@@ -420,7 +420,7 @@ presubmits:
     decorate: true
     labels:
       ci.openshift.io/manually-branched: "true"
-    name: pull-ci-openshift-telemeter-release-4.4-release-4.4-generate
+    name: pull-ci-openshift-telemeter-release-4.4-master-generate
     rerun_command: /test generate
     spec:
       containers:
