--- a/ci-operator/jobs/openshift/cluster-machine-approver/openshift-cluster-machine-approver-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-machine-approver/openshift-cluster-machine-approver-release-4.4-presubmits.yaml
@@ -210,6 +210,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-machine-approver-release-4.4-e2e-azure-operator
+    optional: true
     rerun_command: /test e2e-azure-operator
     spec:
       containers:
@@ -310,6 +311,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-machine-approver-release-4.4-e2e-gcp-operator
+    optional: true
     rerun_command: /test e2e-gcp-operator
     spec:
       containers:
