--- a/ci-operator/jobs/openshift/cluster-openshift-apiserver-operator/openshift-cluster-openshift-apiserver-operator-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-openshift-apiserver-operator/openshift-cluster-openshift-apiserver-operator-release-4.4-presubmits.yaml
@@ -199,7 +199,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-operator,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.4
     context: ci/prow/e2e-aws-operator-encryption
@@ -211,6 +211,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-openshift-apiserver-operator-release-4.4-e2e-aws-operator-encryption
     rerun_command: /test e2e-aws-operator-encryption
+    run_if_changed: ^(vendor/github.com/openshift/library-go/pkg/operator/encryption)|^(vendor/github.com/openshift/library-go/test/library/encryption)|^(test/e2e-encryption)|^(test/library/encryption)
     spec:
       containers:
       - args:
@@ -299,7 +300,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-operator-encryption,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.4
     context: ci/prow/e2e-aws-operator-encryption-perf
@@ -311,6 +312,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-openshift-apiserver-operator-release-4.4-e2e-aws-operator-encryption-perf
     rerun_command: /test e2e-aws-operator-encryption-perf
+    run_if_changed: ^(vendor/github.com/openshift/library-go/pkg/operator/encryption)|^(test/e2e-encryption-perf)|^(test/library/encryption)
     spec:
       containers:
       - args:
