--- a/ci-operator/jobs/openshift/image-registry/openshift-image-registry-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/image-registry/openshift-image-registry-release-4.4-presubmits.yaml
@@ -351,6 +351,69 @@ presubmits:
     always_run: true
     branches:
     - release-4.4
+    context: ci/prow/integration
+    decorate: true
+    name: pull-ci-openshift-image-registry-release-4.4-integration
+    rerun_command: /test integration
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
+        - --give-pr-author-access-to-namespace=true
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --kubeconfig=/etc/apici/kubeconfig
+        - --org=openshift
+        - --repo=image-registry
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --target=integration
+        - --template=/usr/local/integration
+        command:
+        - ci-operator
+        env:
+        - name: COMMAND
+          value: TEST_KUBECONFIG=${KUBECONFIG} ARTIFACT_DIR=/tmp/artifacts JUNIT_REPORT=true
+            make test-integration
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-image-registry-release-4.4.yaml
+              name: ci-operator-4.4-configs
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
+        - mountPath: /usr/local/integration
+          name: job-definition
+          subPath: master-sidecar-4.4.yaml
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
+      - configMap:
+          name: prow-job-release-master-sidecar-4.4
+        name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
+    trigger: (?m)^/test( | .* )integration,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - release-4.4
     context: ci/prow/unit
     decorate: true
     decoration_config:
