--- a/ci-operator/jobs/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.4-presubmits.yaml
@@ -113,6 +113,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kubernetes-autoscaler-release-4.4-e2e-azure-operator
+    optional: true
     path_alias: k8s.io/autoscaler
     rerun_command: /test e2e-azure-operator
     spec:
@@ -214,6 +215,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kubernetes-autoscaler-release-4.4-e2e-gcp-operator
+    optional: true
     path_alias: k8s.io/autoscaler
     rerun_command: /test e2e-gcp-operator
     spec:
