--- a/ci-operator/jobs/openshift/library-go/openshift-library-go-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/library-go/openshift-library-go-release-4.4-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   openshift/library-go:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.4
     context: ci/prow/e2e-aws-encryption
@@ -13,6 +13,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-library-go-release-4.4-e2e-aws-encryption
     rerun_command: /test e2e-aws-encryption
+    run_if_changed: ^(pkg/operator/encryption)|^(test/e2e-encryption)
     spec:
       containers:
       - args:
