--- a/ci-operator/jobs/openshift/openshift-controller-manager/openshift-openshift-controller-manager-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-controller-manager/openshift-openshift-controller-manager-release-4.4-presubmits.yaml
@@ -198,7 +198,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-builds,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.4
     context: ci/prow/e2e-aws-proxy
@@ -209,6 +209,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-openshift-controller-manager-release-4.4-e2e-aws-proxy
+    optional: true
     rerun_command: /test e2e-aws-proxy
     spec:
       containers:
