coordinating shared volumes between containers

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1299,12 +1299,12 @@ objects:
             LB_FIP_AND_ID=$(openstack floating ip create --description api.$CLUSTER_NAME.$BASE_DOMAIN $OPENSTACK_EXTERNAL_NETWORK --format value -c 'floating_ip_address' -c 'id')
             LB_FIP=$(echo $LB_FIP_AND_ID |awk '{print $1}')
             LB_FIP_UID=$(echo $LB_FIP_AND_ID |awk '{print $2}')
-            echo $LB_FIP_UID > /tmp/shared/LB_FIP_UID
+            echo $LB_FIP_UID > /tmp/LB_FIP_UID
 
             INGRESS_FIP_AND_ID=$(openstack floating ip create --description ingress.$CLUSTER_NAME.$BASE_DOMAIN $OPENSTACK_EXTERNAL_NETWORK --format value -c 'floating_ip_address' -c 'id')
             INGRESS_FIP=$(echo $INGRESS_FIP_AND_ID |awk '{print $1}')
             INGRESS_FIP_UID=$(echo $INGRESS_FIP_AND_ID |awk '{print $2}')
-            echo $INGRESS_FIP_UID > /tmp/shared/INGRESS_FIP_UID
+            echo $INGRESS_FIP_UID > /tmp/INGRESS_FIP_UID
 
 
             if [ -z "$DO_NOT_CREATE_DNS_RECORD" ]; then
@@ -1710,7 +1710,7 @@ objects:
 
           echo "bootstrap: ${BOOTSTRAP_IP} control-plane: ${CONTROL_PLANE_0_IP} ${CONTROL_PLANE_1_IP} ${CONTROL_PLANE_2_IP} compute: ${COMPUTE_0_IP} ${COMPUTE_1_IP}"
         elif [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
-          cp /tmp/artifacts/installer/bootstrap.ign /tmp/sif
+          cp /tmp/artifacts/installer/bootstrap.ign /srv
           BOOTSTRAP_URI="https://${JOB_NAME_SAFE}-bootstrap-exporter-${NAMESPACE}.svc.ci.openshift.org/bootstrap.ign"
           echo "OpenStack UPI directory: '$UPI_DIR'"
 
